Slight fixes to the README file.

--- a/README.html
+++ b/README.html
@@ -136,16 +136,18 @@ into an Anaconda environment named <code>OOF2</code>, set
 <li>Similarly, change <code>OOF2_PYTHON_VERSION</code> to the version of
 python3 that you have installed, and <code>OOF2_SWIG_VERSION</code> to
 the version of swig4. Use the same values you used when installing
-OOFCanvas.</li>
+OOFCanvas. Use <code>&lt;return&gt;</code> to cycle through the allowed
+values.</li>
 <li>If you are going to build OOF2 extension modules, set
 <code>OOF2_DEV_INSTALL</code> to <code>ON</code>. This will install the
 C++ headers and other useful files.</li>
 <li>Type <code>c</code> to update the configuration.</li>
 <li>Type <code>g</code> to generate the build scripts and exit.</li>
-<li>If <code>g</code> wassn’t an option at the bottom of the screen in
+<li>If <code>g</code> wasn’t an option at the bottom of the screen in
 the previous step and ccmake didn’t exit, the previous <code>c</code>
 probably added new variables. Check their values and type <code>c</code>
-again until the <code>g</code> appears, then type <code>g</code>.</li>
+again until the <code>g</code> appears, and then type
+<code>g</code>.</li>
 </ul>
 <h3 id="build-and-install">6. Build and install</h3>
 <p>Run</p>
