Tweaked the README file.
The link to the prerequisites installation page is now above
the list of prerequisites.

--- a/README.html
+++ b/README.html
@@ -31,6 +31,11 @@ commands.</p>
 <p>A computer running a variant of the Unix operating system, including
 Linux and Macintosh. OOF2 currently does <em>not</em> run on Microsoft
 Windows, but ought to run inside a Linux virtual machine on Windows.</p>
+<p>Detailed instructions for installing the OOF2 prerequisites on a
+number of different operating systems can be found on the <a
+href="http://www.ctcms.nist.gov/oof/oof2/prerequisites.html">OOF2
+Prerequisites page</a>. Those instructions may be more up-to-date than
+the ones here.</p>
 <p>The following external programs and libraries must be present before
 you can run OOF2. To compile OOF2 from sources, you will also require
 the header files (“includes”) associated with these programs and
@@ -38,7 +43,7 @@ libraries. These are usually available as part of a “development”
 version of the library software.</p>
 <ul>
 <li><a href="http://www.python.org">Python 3 (3.8 or later)</a></li>
-<li>[Swig (4.0 or 4.1)] (https://www.swig.org)</li>
+<li><a href="https://www.swig.org">SWIG (4.0 or later)</a></li>
 <li><a href="http://www.imagemagick.org/Magick++/index.html">Magick++
 (6.x, but not 7.x)</a></li>
 <li><a href="http://www.gtk.org/download/">gtk3 (3.22 or later)</a></li>
@@ -66,10 +71,6 @@ X11 on Macs, so Quartz is recommended.</p>
 libraries are required. On Linux and commercial Unix systems, they may
 have to be installed, and you may require headers (sometimes provided as
 part of a “-dev” package).</p>
-<p>Detailed instructions for installing the OOF2 prerequisites on a
-number of different operating systems can be found on the <a
-href="http://www.ctcms.nist.gov/oof/oof2/prerequisites.html">OOF2
-Prerequisites page</a>.</p>
 <h2 id="installing-oof2">Installing OOF2</h2>
 <p>Commands in the following steps should be typed into a terminal
 window, after you have installed all the OOF2 prerequisites. In the
